# Rika

./: .gitmodules
agent/: README.md  pyproject.toml
agent/agent/: .env.example  main.py
agent/agent/app/: agent.py  eexample.py
agent/agent/app/contract/: abi.py  client.py  models.py
agent/agent/app/routes/agent/: agent.py  model.py
agent/agent/app/routes/celery/: celery.py
agent/agent/app/routes/web3/: client.py  model.py
agent/agent/app/tasks/: celery.py
contract/: README.md  arguments.js  foundry.toml  hardhat.config.js  package.json  pnpm-lock.yaml
contract/cache_forge/: solidity-files-cache.json
contract/contracts/: RUSDC.sol  RUSDCFaucet.sol  RikaFactory.sol  RikaManagement.sol
contract/scripts/: deploy.js
contract/test/: RUSDC.t.sol  RUSDCFaucet.t.sol  RikaFactory.t.sol  RikaManagement.t.sol
